--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -6,6 +6,16 @@
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "module": "ESNext",
     "skipLibCheck": true,
+    "baseUrl": "./src",
+    "paths": {
+      "assets/": ["assets/"],
+      "pages/": ["pages/"],
+      "components/": ["components/"],
+      "contexts/": ["contexts/"],
+      "validations/": ["validations/"],
+      "api/": ["api/"]
+    },
+    "resolveJsonModule": true,
 
     /* Bundler mode */
     "moduleResolution": "bundler",
