--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "react-dom": "18.2.0",
     "react-router": "^7.6.0",
     "react-slick": "^0.30.3",
-    "react-toastify": "^11.0.5",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "sonner": "^2.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
