--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.1.1",
     "@react-oauth/google": "^0.12.2",
     "axios": "^1.9.0",
+    "joi": "^17.13.3",
     "jwt-decode": "^4.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.58.0",
     "react-router": "^7.6.0",
     "react-slick": "^0.30.3",
     "slick-carousel": "^1.8.1",
