--- a/package.json
+++ b/package.json
@@ -1,41 +1,42 @@
 {
-  "name": "ecommerce",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc -b && vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "@hookform/resolvers": "^5.1.1",
-    "@react-oauth/google": "^0.12.2",
-    "axios": "^1.9.0",
-    "joi": "^17.13.3",
-    "jwt-decode": "^4.0.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-hook-form": "^7.58.0",
-    "react-router": "^7.6.0",
-    "react-slick": "^0.30.3",
-    "slick-carousel": "^1.8.1",
-    "sonner": "^2.0.5"
-  },
-  "devDependencies": {
-    "@eslint/js": "^9.25.0",
-    "@types/node": "^22.15.17",
-    "@types/react": "18.2.56",
-    "@types/react-dom": "18.2.19",
-    "@types/react-slick": "^0.23.13",
-    "@vitejs/plugin-react": "^4.4.1",
-    "eslint": "^9.25.0",
-    "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.19",
-    "globals": "^16.0.0",
-    "typescript": "~5.8.3",
-    "typescript-eslint": "^8.30.1",
-    "vite": "^6.3.5"
-  }
+	"name": "ecommerce",
+	"private": true,
+	"version": "1.0.0",
+	"type": "module",
+	"scripts": {
+		"dev": "vite",
+		"build": "tsc -b && vite build",
+		"lint": "eslint .",
+		"preview": "vite preview"
+	},
+	"dependencies": {
+		"@hookform/resolvers": "^5.1.1",
+		"@react-oauth/google": "^0.12.2",
+		"axios": "^1.9.0",
+		"joi": "^17.13.3",
+		"jwt-decode": "^4.0.0",
+		"react": "18.2.0",
+		"react-dom": "18.2.0",
+		"react-hook-form": "^7.58.0",
+		"react-router": "^7.6.0",
+		"react-slick": "^0.30.3",
+		"react-spinners": "^0.17.0",
+		"slick-carousel": "^1.8.1",
+		"sonner": "^2.0.5"
+	},
+	"devDependencies": {
+		"@eslint/js": "^9.25.0",
+		"@types/node": "^22.15.17",
+		"@types/react": "18.2.56",
+		"@types/react-dom": "18.2.19",
+		"@types/react-slick": "^0.23.13",
+		"@vitejs/plugin-react": "^4.4.1",
+		"eslint": "^9.25.0",
+		"eslint-plugin-react-hooks": "^5.2.0",
+		"eslint-plugin-react-refresh": "^0.4.19",
+		"globals": "^16.0.0",
+		"typescript": "~5.8.3",
+		"typescript-eslint": "^8.30.1",
+		"vite": "^6.3.5"
+	}
 }
